# CNetNexus

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  build-gns3-image.sh  docker-compose.yml  install-docker.sh  valgrind.supp
.github/workflows/: cmake-netnexus.yml  code-quality.yml
config/: commands_base.xml  commands_bgp.xml  commands_cfg.xml  commands_dev.xml
data/bgp/: bgp_db.db
docs/: clang-analysis.md  install-clang-tools.md
docs/cli/: bgp.md
docs/dev/: DEVELOPMENT.md
docs/prod/: DEPLOYMENT.md
gns3/: netnexus.gns3a
include/: basetype.h  cli.h  errcode.h  nn_cfg.h  nn_db.h  nn_dev.h  nn_errcode.h  nn_message_queue.h  nn_module_registry.h  nn_path_utils.h
scripts/: build-with-asan.sh  check-format.sh  cleanup-dev-interfaces.sh  format-code.sh  run-ci-checks.sh  run-clang-tidy.sh  run-debug-container.sh
scripts/dev/: build.sh  check-memory-leaks.sh  clean.sh  debug.sh  start.sh
scripts/docker/: setup-dev-interfaces.sh  show-dev-interfaces.sh
scripts/prod/: deploy.sh  package.sh  start.sh
src/: CMakeLists.txt  main.c
src/bgp/: CMakeLists.txt  commands.xml  nn_bgp_api.c  nn_bgp_cfg.c  nn_bgp_cfg.h  nn_bgp_cli.c  nn_bgp_cli.h  nn_bgp_main.c  nn_bgp_main.h
src/bgp/resources/: commands.xml
src/cfg/: CMakeLists.txt  commands.xml  nn_cfg_api.c  nn_cfg_cli.c  nn_cfg_cli.h  nn_cfg_main.c  nn_cfg_main.h  nn_cfg_registry.c  nn_cfg_registry.h  nn_cfg_show_config.c  nn_cfg_show_config.h  nn_cfg_template_renderer.c  nn_cfg_template_renderer.h  nn_cli_dispatch.c  nn_cli_dispatch.h  nn_cli_element.c  nn_cli_element.h  nn_cli_handler.c  nn_cli_handler.h  nn_cli_history.c  nn_cli_history.h  nn_cli_param_type.c  nn_cli_param_type.h  nn_cli_tree.c  nn_cli_tree.h  nn_cli_view.c  nn_cli_view.h  nn_cli_xml_parser.c  nn_cli_xml_parser.h  nn_config_template.c  nn_config_template.h
src/cfg/lib/: CMakeLists.txt
src/cfg/resources/: commands.xml
src/cli/: nn_cli_element.h  nn_cli_handler.c  nn_cli_handler.h  nn_cli_tree.c  nn_cli_tree.h  nn_cli_xml_parser.c  nn_cli_xml_parser.h
src/core/: nn_message_queue.c  nn_module_registry.c
src/db/: CMakeLists.txt  nn_db_api.c  nn_db_cli.c  nn_db_cli.h  nn_db_main.c  nn_db_main.h  nn_db_registry.c  nn_db_registry.h  nn_db_schema.c
src/db/resources/: commands.xml
src/dev/: CMakeLists.txt  commands.xml  nn_dev_api.c  nn_dev_cli.c  nn_dev_cli.h  nn_dev_main.c  nn_dev_main.h  nn_dev_module.c  nn_dev_module.h  nn_dev_mq.c  nn_dev_mq.h  nn_dev_pubsub.c  nn_dev_pubsub.h
src/dev/lib/: nn_dev_module.c  nn_dev_module.h
src/dev/resources/: commands.xml
src/if/: CMakeLists.txt  nn_if.c  nn_if.h  nn_if_cli.c  nn_if_cli.h  nn_if_main.c  nn_if_main.h  nn_if_map.c  nn_if_map.h
src/if/resources/: commands.xml  nn_if_map.conf.gns3  nn_if_map.conf.local
src/interface/: commands.xml  interface_map.conf.gns3  interface_map.conf.local  nn_interface.c  nn_interface.h  nn_interface_map.c  nn_interface_map.h
src/interface/resources/: commands.xml
src/modules/: CMakeLists.txt
src/modules/bgp/: CMakeLists.txt  bgp_module.c  commands.xml
src/modules/cfg/: CMakeLists.txt  cfg_module.c  commands.xml  nn_cli_dispatch.c  nn_cli_dispatch.h  nn_cli_element.c  nn_cli_handler.c  nn_cli_handler.h  nn_cli_tree.c  nn_cli_view.c  nn_cli_xml_parser.c  nn_cli_xml_parser.h
src/modules/dev/: CMakeLists.txt  commands.xml  dev_module.c
src/utils/: CMakeLists.txt  nn_path_utils.c
